# piu

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  grammar.py  left_recursion.py  pylintrc  pyproject.toml  test.py  test_bnf.py  test_cnf.py  test_gnf.py
examples/: lark.lark  python2.lark  verilog.lark
piu/exceptions/: base.py
piu/grammars/: element.py  parser.py  predictor.py
piu/grammars/converters/: grammar.py  rule.py  simplifier.py  type.py  utils.py
piu/grammars/converters/bnf/: backus.py
piu/grammars/converters/cnf/: chomsky.py
piu/grammars/converters/gnf/: chomsky.py  grammar.py  greibach.py  simplifier.py
