[tool.poetry]
name = "piu"
version = "0.1.0"
description = "A collection of logit processors that enforces output format on large language models (LLM)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
lark = "^1.2.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.2.6"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
